<resources>
    <string name="app_name">StreamCam</string>
    <string name="action_settings">Settings</string>

    <string name="LOGIN_title">Log In</string>
    <string name="LOGIN_username_hint">User Name</string>
    <string name="LOGIN_password_hint">Password</string>
    <string name="LOGIN_login_button">Log In</string>
    <string name="LOGIN_welcome_message">Welcome to StreamCam!\nPlease sign in.</string>
    <string name="LOGIN_create_account_button">Create Account</string>

    <string name="CAMERA_title">Camera</string>
    <string name="CAMERA_record_button">Record Button</string>

    <string name="CREATE_ACC_title">Create New Account</string>
    <string name="CREATE_ACC_username_hint">User Name</string>
    <string name="CREATE_ACC_password_hint">Password</string>
    <string name="CREATE_ACC_confirm_password_hint">Confirm Password</string>
    <string name="CREATE_ACC_button">Create Account</string>

    <string name="ADDRESS_SERVICES_service_not_available">Address services is not available.</string>
    <string name="ADDRESS_SERVICES_invalid_lat_long_used">Invalid latitude/longitude values used.</string>
    <string name="ADDRESS_SERVICES_no_address_found">No address found for coordinates.</string>
    <string name="ADDRESS_SERVICES_address_found">Address was found for coordinates.</string>
    <string name="ADDRESS_SERVICES_no_geocoder_available">No Geocoder available.</string>
</resources>
