<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="juanscarrillo.streamcam.CreateNewAccountActivity"
    tools:showIn="@layout/activity_create_new_account">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:id="@+id/CREATE_ACCOUNT_username"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:hint="@string/CREATE_ACC_username_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/CREATE_ACCOUNT_password"
        android:layout_below="@+id/CREATE_ACCOUNT_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/CREATE_ACC_password_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/CREATE_ACCOUNT_confirm_password"
        android:layout_below="@+id/CREATE_ACCOUNT_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/CREATE_ACC_confirm_password_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CREATE_ACC_button"
        android:id="@+id/CREATE_ACCOUNT_create_account_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="createAccountButtonClicked"/>
</RelativeLayout>