<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="juanscarrillo.streamcam.LoginScreen"
    tools:showIn="@layout/activity_login_screen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LOGIN_welcome_message"
        android:id="@+id/welcome_message_login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textFilter"
        android:id="@+id/LOGIN_username_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:hint="@string/LOGIN_username_hint"
        android:layout_alignRight="@+id/LOGIN_password_text"
        android:layout_alignEnd="@+id/LOGIN_password_text"
        android:layout_alignLeft="@+id/LOGIN_password_text"
        android:layout_alignStart="@+id/LOGIN_password_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:ems="10"
        android:id="@+id/LOGIN_password_text"
        android:hint="@string/LOGIN_password_hint"
        android:layout_below="@+id/LOGIN_username_text"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN_login_button"
        android:id="@+id/LOGIN_login_button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/welcome_message_login"
        android:layout_alignStart="@+id/welcome_message_login"
        android:layout_alignRight="@+id/welcome_message_login"
        android:layout_alignEnd="@+id/welcome_message_login"
        android:onClick="loginButtonClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN_create_account_button"
        android:id="@+id/button"
        android:layout_below="@+id/LOGIN_login_button"
        android:layout_alignRight="@+id/LOGIN_login_button"
        android:layout_alignEnd="@+id/LOGIN_login_button"
        android:layout_alignLeft="@+id/LOGIN_login_button"
        android:layout_alignStart="@+id/LOGIN_login_button"
        android:onClick="goToCreateAccountActivityFromLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/LOGIN_HTTP_response"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:hint="HTTP Response will go here!" />
</RelativeLayout>